# kto-api-and-cloud

./: NOTES_TROUBLESHOOTING.md  README.md  TROUBLESHOOTING.md  cookiecutter.json  pyproject.toml
courses/: 01_intro.md  02_git.md  03_python_unit_tests_clean_code.md  04_scoping_data_prep_label.md  05_train_in_a_notebook.md  06_ml_platforms.md  07_ci.md  08_fastapi_and_webservices.md  09_docker.md  10_kubernetes.md  11_cd.md  12_integration_tests.md  13_measure_performance.md  99_troubleshooting.md
{{cookiecutter.__repo_name}}/: .python-version  README.md  pyproject.toml
{{cookiecutter.__repo_name}}/.github/workflows/: ct-ci-cd.yaml  deploy-chatbot.yml  deploy-mcp-server.yml
{{cookiecutter.__repo_name}}/k8s/api/: Dockerfile
{{cookiecutter.__repo_name}}/k8s/experiment/: Dockerfile  kubernetes_config.json
{{cookiecutter.__repo_name}}/scripts/: test_kubernetes_mlflow.sh  test_local_mlflow.sh
{{cookiecutter.__repo_name}}/src/titanic/: main.py
{{cookiecutter.__repo_name}}/src/titanic/api/: infer.py  main.py
{{cookiecutter.__repo_name}}/src/titanic/chatbot/: agent.py
{{cookiecutter.__repo_name}}/src/titanic/mcp_server/: server.py
{{cookiecutter.__repo_name}}/src/titanic/training/: main.py
{{cookiecutter.__repo_name}}/src/titanic/training/steps/: load_data.py  validate.py
{{cookiecutter.repo_name}}/: .gitignore  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: ct-ci-cd.yaml  deploy-chatbot.yml  deploy-mcp-server.yml
{{cookiecutter.repo_name}}/k8s/api/: Dockerfile  api.yaml
{{cookiecutter.repo_name}}/k8s/chatbot/: Dockerfile  chatbot.yaml
{{cookiecutter.repo_name}}/k8s/experiment/: Dockerfile  kubernetes_job_template.yaml
{{cookiecutter.repo_name}}/k8s/mcp_server/: Dockerfile  mcp-server.yaml
{{cookiecutter.repo_name}}/k8s/mlflow/: dailyclean.yml  mlflow.yml
{{cookiecutter.repo_name}}/scripts/: test_kubernetes_mlflow.sh
{{cookiecutter.repo_name}}/src/titanic/api/: infer.py  main.py
{{cookiecutter.repo_name}}/src/titanic/chatbot/: .env.example  agent.py
{{cookiecutter.repo_name}}/src/titanic/mcp_server/: server.py
{{cookiecutter.repo_name}}/src/titanic/training/: MLProject  main.py
{{cookiecutter.repo_name}}/src/titanic/training/steps/: load_data.py  split_train_test.py  train.py  validate.py
{{cookiecutter.repo_name}}/tests/training/: test_main.py
