[project]
name = "{{ cookiecutter.__repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.__project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.__python_version }}"
dependencies = [
    "fire>=0.7.1",
]

[project.scripts]
hello = "titanic.main:main"
api = "titanic.api.main:main"
chatbot = "titanic.chatbot.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
api = [

]
training = [
    "setuptools>=80.9.0", # for ydata-profiling dependency, bug with python 3.13
]
chatbot = [
    "streamlit>=1.40.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "fastmcp>=0.4.0",
    "httpx>=0.28.0",
]
mcp-server = [
    "uvicorn>=0.37.0",
    "fastmcp>=0.4.0",
    "httpx>=0.28.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.7.1",
    "ruff>=0.14.9",
    "pyright>=1.1.407",
    "httpx>=0.28.0",
]